SFDC Automation/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Cases for Known Accounts</fullName>
        <description>Utilize this process when the Account and Contact already exist in Salesforce.com</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cases for Unknown Accounts</fullName>
        <description>Utilize this process when the Vehicle, FIS Account or Contact cannot be found within Salesforce.com</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Compliance Cases</fullName>
        <description>Cases handled by Compliance Team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New Request</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Legal Cases</fullName>
        <description>Cases to be handled by the legal team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Dead Deal</fullName>
        </values>
        <values>
            <fullName>FMS Law Review</fullName>
        </values>
        <values>
            <fullName>In Negotiations</fullName>
        </values>
        <values>
            <fullName>New Request</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Waiting for Response</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>NAFMM</fullName>
        <description>National FIeld Maintenance mangers case to mirror JKT</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Ownership Validations</fullName>
        <description>When an opportunity is won from ownership we need to verify that that is true creating a case</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New Request</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>RFP Response</fullName>
        <description>Is needed to allow the field (National Accounts mainly) to request assistance creating a proposal.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>New Request</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Pursued</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>RSM Support Process</fullName>
        <description>Handles RydeSmart cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Vehicle Purchasing</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Address_City__c</fullName>
        <label>Account Address City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Address_Country__c</fullName>
        <label>Account Address Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Address_State_Province__c</fullName>
        <label>Account Address State/Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Address_Street__c</fullName>
        <label>Account Address Street</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Address_Zip_Postal_Code__c</fullName>
        <label>Account Address Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Classification__c</fullName>
        <formula>TEXT(Account.Account_Classification__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Account.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Manual__c</fullName>
        <label>Account Name-Manual</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <label>Account Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Website__c</fullName>
        <label>Account Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Activity_ID__c</fullName>
        <description>Activity ID for case opened as result of survey</description>
        <label>Activity ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Instructions__c</fullName>
        <inlineHelpText>Please provide much detailed information as possible of what is required for this case</inlineHelpText>
        <label>Additional Instructions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_vehicles__c</fullName>
        <description>additional vehicles associate with the trip record case record type</description>
        <label>Additional vehicles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Verified__c</fullName>
        <label>Address Verified?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amendments__c</fullName>
        <description>For legal cases, describes the type of amendments that are going to be included in the case</description>
        <label>Amendments</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Abate Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Custody Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charges &amp; Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Anniversary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correct Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correct Name of Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default or Breach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Termination (Needs Approval)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excluded Repairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Statements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flex To Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel (Handled by Ryan Marx)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governing Law &amp; Jusrisdiction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hazmat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indemnification &amp; Negligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lemon Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limitation of Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance &amp; Repairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Component Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mileage &amp; Hours: Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mileage &amp; Hours: Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Annual_Review_Conducted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual Review Conducted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Date_Received__c</fullName>
        <description>Date when the approval was received</description>
        <label>Approval Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Award_Date__c</fullName>
        <label>Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Phone_Extension_1__c</fullName>
        <label>Business Phone Extension 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Quite often the legal team works on requests that are not related to a customer but to a particular BU within Ryder</description>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Support/HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RydeSmart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UVS Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Admin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CB_ID_Vehicle__c</fullName>
        <description>Non-integrated field.  Used to pull in the CB ID from the Vehicle onto the Case</description>
        <formula>Vehicle_Number__r.CUSTOMER_BRANCH__r.Id</formula>
        <label>CB_ID_Vehicle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Type__c</fullName>
        <label>Caller Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Age_In_Business_Hours__c</fullName>
        <description>The total case age in business hours from open to close.</description>
        <inlineHelpText>The total case age in business hours from open to close.</inlineHelpText>
        <label>Case Age In Business Hours</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age_in_Days__c</fullName>
        <formula>IF(IsClosed, (CASE(MOD(DATEVALUE(CreatedDate) -  DATE(1985,6,24), 7), 
0 , CASE(MOD(DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE(MOD(DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE(MOD(DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE(MOD(DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE(MOD(DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE(MOD(DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE(MOD(DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate),7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) + (FLOOR((DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate))/7)*5)),
(CASE(MOD (DATEVALUE(CreatedDate) - DATE(1985,6,24),7), 
0 , CASE(MOD(DATEVALUE(NOW()) - DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE(MOD(DATEVALUE(NOW()) - DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE(MOD(DATEVALUE(NOW()) - DATEVALUE(CreatedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE(MOD(DATEVALUE(NOW()) - DATEVALUE(CreatedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE(MOD(DATEVALUE(NOW()) - DATEVALUE(CreatedDate),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE(MOD(DATEVALUE(NOW()) - DATEVALUE(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE(MOD(DATEVALUE(NOW()) - DATEVALUE(CreatedDate),7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) + (FLOOR((DATEVALUE(NOW()) - DATEVALUE(CreatedDate))/7)*5)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age In Business Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Aging__c</fullName>
        <formula>IF(IsClosed, Text(FLOOR(ClosedDate - CreatedDate)) &amp;&quot; &quot;&amp;&quot;day(s)&quot;&amp;&quot; &quot;&amp;Text(FLOOR(MOD( (ClosedDate - CreatedDate) * 24 ,24))) &amp;&quot; &quot;&amp;&quot;hrs&quot;&amp;&quot; &quot;&amp;Text( FLOOR(MOD(((ClosedDate - CreatedDate) * 24)*60 ,60)))&amp;&quot; &quot;&amp;&quot;min&quot;, Text(FLOOR(NOW() - CreatedDate)) &amp;&quot; &quot;&amp;&quot;day(s)&quot;&amp;&quot; &quot;&amp;Text(FLOOR(MOD( (NOW() - CreatedDate) * 24 ,24))) &amp;&quot; &quot;&amp;&quot;hrs&quot;&amp;&quot; &quot;&amp;Text( FLOOR(MOD(((NOW() - CreatedDate) * 24)*60 ,60)))&amp;&quot; &quot;&amp;&quot;min&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Aging</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_to_be_resolved_outside_of_SFDC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case to be resolved outside of SFDC?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Address__c</fullName>
        <label>Contact Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use to search for an Existing Contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corrective_Action__c</fullName>
        <label>Corrective Action</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_FMS_Relationship__c</fullName>
        <label>Current FMS Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Incumbent (100% Ryder)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split Fleet with Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split Fleet with Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split Fleet with Ownership &amp; Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% Competition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_SCS_RIL_Dedicated_Relationships__c</fullName>
        <label>Current SCS/RIL/Dedicated  Relationships</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer doing business with RIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer doing business with SCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer doing business with Dedicated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_100_Ownership__c</fullName>
        <label>Customer 100% Ownership</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer / Branch</label>
        <referenceTo>Customer_Branch__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <defaultValue>TEXT(60881)</defaultValue>
        <label>Customer Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_has_no_email_address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer has no email address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_s_Bid_Strategy__c</fullName>
        <label>Customer&apos;s Bid Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>One Bid and award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple rounds before awarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect in Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect currently Outsources Fleet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customers_Award_Strategy__c</fullName>
        <label>Customers Award Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>Will award to multiple vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will  award to one vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May evaluate and do nothing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Prior_to_Deadline__c</fullName>
        <formula>IF(Proposal_Due_Date__c - TODAY() &gt; 0,Proposal_Due_Date__c - TODAY(), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Prior to Deadline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <description>This hidden field will be populated by a workflow rule</description>
        <label>Director</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_or_Matter__c</fullName>
        <label>Document or Matter</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>TLSA (Full Service Lease)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Maintenance: Preventive (RPM L1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Maintenance: Comprehensive RPM 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Maintenance: On-Demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment / Assumption (Credit Handles)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill of Sale - Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill of Sale - UTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consent to Sublease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guaranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Disclosure Agreement (NDA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Site Maintenance Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presidential Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryde Smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryder Integrated Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement of Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Agreement/Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico FMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puerto Rico FMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Documents_Required__c</fullName>
        <description>This is the field that the VP analyst will select from to indicate which documents are required by the VP team to order the vehicle</description>
        <label>Documents Required</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>OEM Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval - Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval - Short-Term Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval - Early Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Dates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spec Clarification</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Duration_Open__c</fullName>
        <formula>IF(IsClosed, 
ROUND(ClosedDate - CreatedDate, 0), ROUND((NOW() - CreatedDate),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Early_Termination_Reason__c</fullName>
        <label>Early Termination Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address_Verified__c</fullName>
        <label>Email Address Verified?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Non-existing contact&apos;s email.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Even_Amount_Code__c</fullName>
        <label>Even Amount Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_units_with__c</fullName>
        <label>Existing units with</label>
        <picklist>
            <controllingField>Customer_100_Ownership__c</controllingField>
            <picklistValues>
                <fullName>Comcar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dixie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hogan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ideal Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pac Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penske</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ext_Id__c</fullName>
        <description>Used as External ID in Trip Record Cases to track cases coming from Tax Compliance</description>
        <externalId>true</externalId>
        <label>Ext_Id</label>
        <length>26</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FIS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FIS Account</label>
        <referenceTo>FIS_Account__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FMS_Law_Comments__c</fullName>
        <label>FMS Law Comments</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FMS_Sales_Rep__c</fullName>
        <formula>Opportunity_Case__r.Owner.FirstName&amp;&apos; &apos;&amp; &apos; &apos;&amp;Opportunity_Case__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FMS Sales Rep</label>
        <type>Text</type>
    </fields>
</CustomObject>